--- a/src/views/admin/formularios/resueltos/referencias/index.ejs
+++ b/src/views/admin/formularios/resueltos/referencias/index.ejs
@@ -46,7 +46,7 @@
             </div>
             <div class="col-auto ms-auto d-print-none">
               <div class="btn-list">
-                <form action="/admin/formularios/resueltos/referencias" method="GET">  
+                <form action="/admin/formularios/resueltos/referencias/<%- datos.formulario.IDFORM %>" method="GET">
                   <div class="input-icon">
                     <span class="input-icon-addon">
                       <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24"
