--- a/src/views/admin/historicos/edit.ejs
+++ b/src/views/admin/historicos/edit.ejs
@@ -142,7 +142,7 @@
                 </div>
                 <div class="card-footer text-end">
                   <div class="d-flex">
-                    <a href="/admin/historicos" class="btn btn-white">Cancelar</a>
+                    <a href="#" id="volver" class="btn btn-white">Volver</a>
                     <button type="submit" class="btn btn-primary ms-auto" id="btnUpdate">Actualizar historico</button>
                   </div>
                 </div>
