--- a/src/views/user/formularios/asignados/add.ejs
+++ b/src/views/user/formularios/asignados/add.ejs
@@ -156,7 +156,7 @@
                 </div>
                 <div class="card-footer text-end">
                   <div class="d-flex">
-                    <a id="back-link" class="btn btn-white">Cancelar</a>
+                    <a href="#" id="volver" class="btn btn-white">Volver</a>
                     <button type="submit" class="btn btn-primary ms-auto" id="btnInsert">Crear nevo formulario</button>
                   </div>
                 </div>
@@ -173,9 +173,6 @@
   <script src="/js/user/formularios/asignados/addEdit.js"></script>
   <script>
     document.getElementById('add').setAttribute('action', `/user/formularios/asignados/insert?part=${getCookie('filtro')}`)
-  </script>
-  <script>
-    document.getElementById('back-link').setAttribute('href', document.referrer)
   </script>
 </body>
 
