--- a/src/views/admin/historicos/index.ejs
+++ b/src/views/admin/historicos/index.ejs
@@ -89,6 +89,7 @@
     <%- include('../../partials/footer') %>
   </div>
 
+  <!-- modales -->
   <div class="modal modal-blur fade" id="modal-activar" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
       <div class="modal-content">
@@ -126,16 +127,10 @@
   </div>
 
   <script>
-    const hasNexts = <%- datos.hasNexts %>
-  </script>
-  <script>
-    const hasPrevs = <%- datos.hasPrevs %>
+    const datos = <%- JSON.stringify(datos) %>
   </script>
   <script src="/js/util.js"></script>
   <script src="/js/admin/historicos/index.js"></script>
-  <script>
-    buildTable(<%- JSON.stringify(datos.historicos) %>, <%- JSON.stringify(datos.cursor) %>)
-  </script>
 </body>
 
 </html>
