--- a/src/views/user/formularios/resueltos/edit.ejs
+++ b/src/views/user/formularios/resueltos/edit.ejs
@@ -131,7 +131,7 @@
                   </div>
                   <div class="card-footer text-end">
                     <div class="d-flex">
-                      <a id="back-link" class="btn btn-white">Cancelar</a>
+                      <a href="#" id="volver" class="btn btn-white">Volver</a>
                     </div>
                   </div>
               </div>
@@ -142,9 +142,8 @@
     </div>
     <%- include('../../../partials/footer') %>
   </div>
-  <script>
-    document.getElementById('back-link').setAttribute('href', document.referrer)
-  </script>
+  <script src="/js/util.js"></script>
+  <script src="/js/admin/formularios/asignados/referencias/addEdit.js"></script>
 </body>
 
 </html>
