--- a/src/views/admin/formularios/asignados/referencias/index.ejs
+++ b/src/views/admin/formularios/asignados/referencias/index.ejs
@@ -85,8 +85,8 @@
                         <th class="w-5"></th>
                         <th class="w-7">Fecha</th>
                         <th class="w-8">NIF</th>
-                        <th>Tipo</th>
-                        <th class="w-9">Referencia</th>
+                        <th class="W-25">Tipo</th>
+                        <th>Descripción</th>
                         <th class="w-5"></th>
                       </tr>
                     </thead>
