--- a/src/views/user/formularios/asignados/referencias/edit.ejs
+++ b/src/views/user/formularios/asignados/referencias/edit.ejs
@@ -109,7 +109,7 @@
   <script src="/js/user/formularios/asignados/referencias/addEdit.js"></script>
   <script>
     const elemAdd = document.getElementById('upd');
-    elemAdd.setAttribute('action', `/user/formularios/asignados/referencias/update?part=${getCookie('filtro')}`)
+    elemAdd.setAttribute('action', `/user/formularios/asignados/referencias/update?part=${getCookie('filtra')}`)
   </script>
 </body>
 
