--- a/src/views/user/formularios/asignados/referencias/index.ejs
+++ b/src/views/user/formularios/asignados/referencias/index.ejs
@@ -86,7 +86,8 @@
                         <th class="w-5"></th>
                         <th class="w-6">Fecha</th>
                         <th class="w-8">NIF</th>
-                        <th>Tipo</th>
+                        <th class="w-25">Tipo</th>
+                        <th>Descripción</th>
                         <th class="w-5"></th>
                       </tr>
                     </thead>
