--- a/src/views/user/formularios/resueltos/referencias/index.ejs
+++ b/src/views/user/formularios/resueltos/referencias/index.ejs
@@ -46,7 +46,7 @@
             </div>
             <div class="col-auto ms-auto d-print-none">
               <div class="btn-list">
-                <form action="/user/formularios/resueltos/referencias" method="GET">  
+                <form action="/user/formularios/resueltos/referencias/<%- datos.formulario.IDFORM %>" method="GET">
                   <div class="input-icon">
                     <span class="input-icon-addon">
                       <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24"
@@ -90,7 +90,7 @@
                       <div id="pagination-wrapper" class="nav py-1"></div>
                     </div>
                     <div class="col-12 col-lg-auto mt-3 mt-lg-0">
-                      <a href="#" id="volver" class="btn btn-white" onclick="deleteCookie('filtra');">Volver</a>
+                      <a href="#" id="volver" class="btn btn-white" onclick="deleteCookie('filtrb');">Volver</a>
                     </div>
                   </div>
                 </div>                
