--- a/src/views/user/formularios/asignados/add.ejs
+++ b/src/views/user/formularios/asignados/add.ejs
@@ -36,7 +36,7 @@
                 Crear
               </div>
               <h2 class="page-title">
-                Formularios
+                Formulario
               </h2>
             </div>
           </div>
