--- a/src/views/user/formularios/asignados/referencias/add.ejs
+++ b/src/views/user/formularios/asignados/referencias/add.ejs
@@ -109,7 +109,7 @@
   <script src="/js/util.js"></script>
   <script src="/js/user/formularios/asignados/referencias/addEdit.js"></script>
   <script>
-    document.getElementById('add').setAttribute('action', `/user/formularios/asignados/referencias/insert?part=${getCookie('filtro')}`)
+    document.getElementById('add').setAttribute('action', `/user/formularios/asignados/referencias/insert?part=${getCookie('filtra')}`)
   </script>
 </body>
 
