--- a/src/views/user/formularios/asignados/referencias/add.ejs
+++ b/src/views/user/formularios/asignados/referencias/add.ejs
@@ -80,7 +80,7 @@
                         <div class="mb-1">
                           <div class="input-control">
                             <label class="form-label required">Descripción</label>
-                            <input type="text" name="desref" id="desref" class="form-control" value="" />
+                            <input type="text" name="desref" id="desref" class="form-control text-uppercase" value="" />
                             <div class="invalid-feedback"></div>
                           </div>
                         </div>
