--- a/src/views/user/formularios/asignados/referencias/edit.ejs
+++ b/src/views/user/formularios/asignados/referencias/edit.ejs
@@ -79,7 +79,7 @@
                         <div class="mb-1">
                           <div class="input-control">
                             <label class="form-label required">Descripción</label>
-                            <input type="text" name="desref" id="desref" class="form-control" value="<%- datos.referencia.DESREF %>" />
+                            <input type="text" name="desref" id="desref" class="form-control text-uppercase" value="<%- datos.referencia.DESREF %>" />
                             <div class="invalid-feedback"></div>
                           </div>
                         </div>
