--- a/src/views/admin/formularios/resueltos/referencias/edit.ejs
+++ b/src/views/admin/formularios/resueltos/referencias/edit.ejs
@@ -26,7 +26,7 @@
 <body>
   <div class="page">
     <%- include('../../../../partials/header') %>
-    <%- include('../../../../partials/navbar', {opcion: 'FORMULARIO'}) %>
+    <%- include('../../../../partials/navbar', {opcion: 'ADMINISTRACION'}) %>
     <div class="page-wrapper">
       <div class="page-header d-print-none">
         <div class="container-xl">
@@ -101,7 +101,7 @@
     const datos = <%- JSON.stringify(datos) %>
   </script>
   <script src="/js/util.js"></script>
-  <script src="/js/admin/formularios/resueltos/referencias/addEdit.js"></script>
+  <script src="/js/admin/formularios/resueltos/referencias/edit.js"></script>
 </body>
 
 </html>
