--- a/src/views/admin/oficinas/edit.ejs
+++ b/src/views/admin/oficinas/edit.ejs
@@ -86,10 +86,7 @@
   </div>
 
   <script src="/js/util.js"></script>
-  <script src="/js/admin/oficinas/addEdit.js"></script>
-  <script>
-    document.getElementById('upd').setAttribute('action', `/admin/oficinas/update?part=${getCookie('filtro')}`)
-  </script>
+  <script src="/js/admin/oficinas/edit.js"></script>
 </body>
 
 </html>
