--- a/src/views/admin/tipos/add.ejs
+++ b/src/views/admin/tipos/add.ejs
@@ -87,10 +87,7 @@
   </div>
 
   <script src="/js/util.js"></script>
-  <script src="/js/admin/tipos/addEdit.js"></script>
-  <script>
-    document.getElementById('add').setAttribute('action', `/admin/tipos/insert?part=${getCookie('filtro')}`)
-  </script>
+  <script src="/js/admin/tipos/add.js"></script>
 </body>
 
 </html>
