--- a/src/views/admin/tipos/edit.ejs
+++ b/src/views/admin/tipos/edit.ejs
@@ -88,10 +88,7 @@
   </div>
 
   <script src="/js/util.js"></script>
-  <script src="/js/admin/tipos/addEdit.js"></script>
-  <script>
-    document.getElementById('upd').setAttribute('action', `/admin/tipos/update?part=${getCookie('filtro')}`)
-  </script>
+  <script src="/js/admin/tipos/edit.js"></script>
 </body>
 
 </html>
