--- a/src/views/admin/usuarios/add.ejs
+++ b/src/views/admin/usuarios/add.ejs
@@ -171,10 +171,7 @@
     <%- include('../../partials/footer') %>
   </div>
   <script src="/js/util.js"></script>
-  <script src="/js/admin/usuarios/addEdit.js"></script>
-  <script>
-    document.getElementById('add').setAttribute('action', `/admin/usuarios/insert?part=${getCookie('filtro')}`)
-  </script>
+  <script src="/js/admin/usuarios/add.js"></script>
 </body>
 
 </html>
