--- a/src/views/admin/usuarios/edit.ejs
+++ b/src/views/admin/usuarios/edit.ejs
@@ -168,10 +168,7 @@
   </div>
 
   <script src="/js/util.js"></script>
-  <script src="/js/admin/usuarios/addEdit.js"></script>
-  <script>
-    document.getElementById('upd').setAttribute('action', `/admin/usuarios/update?part=${getCookie('filtro')}`)
-  </script>
+  <script src="/js/admin/usuarios/edit.js"></script>
 </body>
 
 </html>
