--- a/src/views/admin/oficinas/add.ejs
+++ b/src/views/admin/oficinas/add.ejs
@@ -86,10 +86,7 @@
   </div>
 
   <script src="/js/util.js"></script>
-  <script src="/js/admin/oficinas/addEdit.js"></script>
-  <script>
-    document.getElementById('add').setAttribute('action', `/admin/oficinas/insert?part=${getCookie('filtro')}`)
-  </script>
+  <script src="/js/admin/oficinas/add.js"></script>
 </body>
 
 </html>
