--- a/src/views/admin/formularios/asignados/ades/desasignar.ejs
+++ b/src/views/admin/formularios/asignados/ades/desasignar.ejs
@@ -122,6 +122,7 @@
                             <th class="w-1"></th>
                             <th style="width: 10%;">Oficina</th>
                             <th style="width: 5%;">Ejercicio</th>
+                            <th style="width: 7%;">Referencia</th>
                             <th style="width: 7%;">NIF</th>
                             <th>Nombre</th>
                             <th>Tipo</th>
