--- a/src/views/admin/cargas/add.ejs
+++ b/src/views/admin/cargas/add.ejs
@@ -85,7 +85,7 @@
                         <div class="mb-1">
                           <div class="input-control">
                             <label class="form-label required">Referencia</label>
-                            <input type="text" name="refcar" id="refcar" class="form-control" value="" maxlength="11" />
+                            <input type="text" name="refcar" id="refcar" class="form-control text-uppercase" value="" maxlength="11" />
                             <div class="invalid-feedback"></div>
                           </div>
                         </div>
