--- a/src/views/admin/oficinas/edit.ejs
+++ b/src/views/admin/oficinas/edit.ejs
@@ -54,7 +54,7 @@
                       <div class="mb-1">
                         <div class="input-control">
                           <label class="form-label required">Código</label>
-                          <input type="text" name="codofi" id="codofi" class="form-control text-uppercase" value="<%- datos.oficina.CODOFI %>" readonly />
+                          <input type="text" name="codofi" id="codofi" class="form-control text-uppercase" value="<%- datos.oficina.CODOFI %>" autofocus />
                           <div class="invalid-feedback"></div>
                         </div>
                       </div>
@@ -63,7 +63,7 @@
                       <div class="mb-1">
                         <div class="input-control">
                           <label class="form-label required">Descripción</label>
-                          <input type="text" name="desofi" id="desofi" class="form-control text-uppercase" value="<%- datos.oficina.DESOFI %>" autofocus />
+                          <input type="text" name="desofi" id="desofi" class="form-control text-uppercase" value="<%- datos.oficina.DESOFI %>" />
                           <div class="invalid-feedback"></div>
                         </div>
                       </div>
