--- a/src/views/admin/oficinas/index.ejs
+++ b/src/views/admin/oficinas/index.ejs
@@ -81,6 +81,7 @@
                       <tr class="header">
                         <th class="w-5"></th>
                         <th>Nombre</th>
+                        <th class="w-10">Código</th>
                         <th class="w-5"></th>
                       </tr>
                     </thead>
