--- a/src/views/user/formularios/asignados/add.ejs
+++ b/src/views/user/formularios/asignados/add.ejs
@@ -53,7 +53,7 @@
                       <div class="mb-1">
                         <div class="input-control">
                           <label class="form-label required">NIF/NIE</label>
-                          <input type="text" name="nifcon" id="nifcon" class="form-control" style="text-transform: uppercase;" value="" autofocus />
+                          <input type="text" name="nifcon" id="nifcon" class="form-control text-uppercase" value="" autofocus />
                           <div class="invalid-feedback"></div>
                         </div>
                       </div>
@@ -62,7 +62,7 @@
                       <div class="mb-1">
                         <div class="input-control">
                           <label class="form-label required">Nombre</label>
-                          <input type="text" name="nomcon" id="nomcon" class="form-control" style="text-transform: uppercase;" value="" />
+                          <input type="text" name="nomcon" id="nomcon" class="form-control text-uppercase" value="" />
                           <div class="invalid-feedback"></div>
                         </div>
                       </div>
@@ -95,7 +95,7 @@
                       <div class="mb-1">
                         <div class="input-control">
                           <label class="form-label required">Referencia</label>
-                          <input type="text" name="reffor" id="reffor" class="form-control" value="" />
+                          <input type="text" name="reffor" id="reffor" class="form-control text-uppercase" value="" />
                           <div class="invalid-feedback"></div>
                         </div>
                       </div>
