--- a/src/views/user/formularios/asignados/edit.ejs
+++ b/src/views/user/formularios/asignados/edit.ejs
@@ -54,8 +54,7 @@
                       <div class="mb-1">
                         <div class="input-control">
                           <label class="form-label required">NIF/NIE</label>
-                          <input type="text" name="nifcon" id="nifcon" class="form-control"
-                            style="text-transform: uppercase;" value="<%- datos.formulario.NIFCON %>" autofocus />
+                          <input type="text" name="nifcon" id="nifcon" class="form-control text-uppercase" value="<%- datos.formulario.NIFCON %>" autofocus />
                           <div class="invalid-feedback"></div>
                         </div>
                       </div>
@@ -64,8 +63,7 @@
                       <div class="mb-1">
                         <div class="input-control">
                           <label class="form-label required">Nombre</label>
-                          <input type="text" name="nomcon" id="nomcon" class="form-control"
-                            style="text-transform: uppercase;" value="<%- datos.formulario.NOMCON %>" />
+                          <input type="text" name="nomcon" id="nomcon" class="form-control text-uppercase" value="<%- datos.formulario.NOMCON %>" />
                           <div class="invalid-feedback"></div>
                         </div>
                       </div>
@@ -97,7 +95,7 @@
                       <div class="mb-1">
                         <div class="input-control">
                           <label class="form-label required">Referencia</label>
-                          <input type="text" name="reffor" id="reffor" class="form-control" value="<%- datos.formulario.REFFOR %>" />
+                          <input type="text" name="reffor" id="reffor" class="form-control text-uppercase" value="<%- datos.formulario.REFFOR %>" />
                           <div class="invalid-feedback"></div>
                         </div>
                       </div>
