--- a/src/views/user/formularios/pendientes/edit.ejs
+++ b/src/views/user/formularios/pendientes/edit.ejs
@@ -97,7 +97,7 @@
                       <div class="mb-1">
                         <div class="input-control">
                           <label class="form-label required">Referencia</label>
-                          <input type="text" name="reffor" id="reffor" class="form-control" value="<%- datos.formulario.REFFOR %>" />
+                          <input type="text" name="reffor" id="reffor" class="form-control text-uppercase" value="<%- datos.formulario.REFFOR %>" />
                           <div class="invalid-feedback"></div>
                         </div>
                       </div>
