--- a/src/views/user/portal.ejs
+++ b/src/views/user/portal.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
   <script>
-    window.location.href = `http://<%- datos.serverWEB%>:<%- datos.puertoWEB%>/user`
+    window.location.href = `http://etidat.com/user`
   </script>
 </body>
 </html>
